git subrepo pull .local/share/nvim/site/pack/lsp/start/nvim-lspconfig
subrepo:
  subdir: ".local/share/nvim/site/pack/lsp/start/nvim-lspconfig"
  merged: "9f01a73"
upstream:
  origin: "https://github.com/neovim/nvim-lspconfig.git"
  branch: "master"
  commit: "9f01a73"